@@ -1,3 +1,6 @@
+2017-04-27  Kirit Saelensminde  <kirit@felspar.com>
+ Make dates fully comparable.
+
 2017-04-11  Kirit Saelensminde  <kirit@felspar.com>
  Improve error report when coercing JSON to strings fails.
 
